2000-08-28  Mathieu lacage <mathieu@eazel.com>

	* add libunicode to gnome-config request.

2000-08-25  Ariel Rios  <ariel@arcavia.com>

	* configure.in: Finish the glibwww2 stuff.

2000-08-24  JP Rosevear  <jpr@helixcode.com>

	* acconfig.h: HAVE_GLIBWWW instead of HAVE_LIBWWW

	* configure.in: Check for glibwww2 instead of libwww.  Disable
	testgtkhtml until we update the source.

	* Makefile.am: Don't need to build glibwww subdir anymore

2000-08-17  Mathieu Lacage  <mathieu@eazel.com>

	* capplet/Makefile.am: add EXTRA_GNOME_LIBS. This fixes
	the build.

2000-08-14  Yuri Syrota  <rasta@renome.rovno.ua>

	* configure.in: Add uk to ALL_LINGUAS.

2000-08-11  Larry Ewing  <lewing@helixcode.com>

	* Version 0.6

2000-08-09  Robin * Slomkowski  <rslomkow@eazel.com>

	* gtkhtml.spec.in: updated spec
	* src/Makefile.am: fixed the installation of C files

2000-08-08  Robin * Slomkowski  <rslomkow@eazel.com>

	* po/Makefile.in.in: changed srcdir to top_srcdir
	* components/html-editor/Makefile.am:
	* src/Makefile.am:
	trying to make it compile,pass distcheck, and rpm build
	* po/POTFILES.in: tried to remove unused files

2000-08-07  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in,po/fr.po: added French file

2000-08-03  Peter Williams  <peterw@helixcode.com>

	* configure.in (have_bonobo): Check for whether bonobo is
	split into bonobo and bonobox (8/3/2000 and onward) or whether
	it all comes in libbonobo.

2000-07-24  Radek Doulik  <rodo@helixcode.com>

	* configure.in (PSPELL_LIBS): add -lstdc++ when building with
	gcc. It is not ideal solution, but better than link errors we had
	before :-(

2000-07-21  Radek Doulik  <rodo@helixcode.com>

	* configure.in (try_gconf): don't try to find gconf by default,
	use --with-gconf if you want it (this is because we don't want to
	use it until it became more stable, we provide gnome_config
	properties meanwhile)

2000-07-21  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* configure.in: Add ja to ALL_LINGUAS.
